// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomStyle should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Styled Room "
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-style"
      >
        <View
          accessibilityLabel="S's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/@S?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              Styled Room
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 15,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            Custom style applied
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: Default should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="General "
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item"
      >
        <View
          accessibilityLabel="G's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/@G?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              General
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 15,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            A public room
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: DirectMessage should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Alice Johnson "
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-dm"
      >
        <View
          accessibilityLabel="A's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/A?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              Alice Johnson
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 15,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            Hey there!
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: LongRoomName should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="This is a very very very very very very very long room name that should be truncated 9999 members"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-long"
      >
        <View
          accessibilityLabel="L's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/@L?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              This is a very very very very very very very long room name that should be truncated
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 15,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            Long name test
          </Text>
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "paddingLeft": 10,
                  "textAlign": "left",
                },
                {
                  "marginTop": 0.5,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            9999 members
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: OnlyTitle should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Just a title "
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-title"
      >
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              Just a title
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: TeamMain should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Engineering Team "
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-team"
      >
        <View
          accessibilityLabel="E's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/@E?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              Engineering Team
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 15,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            Main team room
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: WithRightLabel should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="General 123 members"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-label"
      >
        <View
          accessibilityLabel="G's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/@G?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              General
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 15,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            Room with label
          </Text>
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "paddingLeft": 10,
                  "textAlign": "left",
                },
                {
                  "marginTop": 0.5,
                },
                {
                  "color": "#6C727A",
                },
              ]
            }
          >
            123 members
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: WithoutDescription should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          },
          [
            {
              "marginHorizontal": 16,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "height": 54,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityLabel="No description room "
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "gap": 12,
            },
            false,
            undefined,
          ]
        }
        testID="directory-item-no-desc"
      >
        <View
          accessibilityLabel="N's avatar"
          accessible={false}
          style={
            [
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              },
              undefined,
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={8}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={30}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            sfEffect={null}
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/@N?format=png&size=60",
                },
              ]
            }
            style={
              {
                "borderRadius": 8,
                "height": 30,
                "width": 30,
              }
            }
            symbolSize={null}
            symbolWeight={null}
            transition={null}
            width={30}
          />
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "marginRight": 20,
              },
              {
                "gap": undefined,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1F2329",
                    "fontSize": 16,
                  },
                  [
                    {
                      "lineHeight": 16,
                    },
                    [
                      {
                        "marginRight": 4,
                      },
                      {
                        "marginRight": 0,
                      },
                    ],
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "flexShrink": 1,
                    "fontSize": 17,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#2F343D",
                  },
                  undefined,
                ]
              }
            >
              No description room
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
